--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,7 @@ RewriteCond %{REQUEST_URI} !^/public/
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 
-
+RewriteBase /
 
 RewriteRule ^(.*)$ /public/$1
 #RewriteRule ^ index.php [L]
